--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-LWAmap",
+  "name": "react-native-lwamap",
   "version": "0.0.1",
-  "author": "luwu",
+  "author": "luwu1991",
   "private": false,
   "license": "Unlicense",
   "repository": {
